--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
 <body>
 
 <div class="container">
-    <h1>csgray.io</h1>
-    <p>This is only a test. If this was a real webpage, it'd say something else.</p>
+    <header>
+        <div class="row">
+            <div class="col-xs-12"><h1>csgray.io</h1></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4"><strong>Current Employment</strong>:</div>
+            <div class="col-sm-8">SysAdmin at University of Alaska Fairbanks</div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4"><strong>Current Project:</strong></div>
+            <div class="col-sm-8">Full Stack Nanodegree from Udacity</div>
+        </div>
+    </header>
+    <br>
+    <div class="row">
+        <p class="col-xs-12">This is only a test. If this was a real webpage, it'd say something else.</p>
+    </div>
 </div>
 
 </body>
