--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@
     </header>
     <br>
     <div class="row">
+        <img class="col-xs-12" src="http://placekitten.com/800/200" alt="PLACE KITTEN!">
+    </div>
+    <br> 
+    <div class="row">
         <p class="col-xs-12">This is only a test. If this was a real webpage, it'd say something else.</p>
+    </div>
+    <br>
+    <div class="row">
+        <img class="col-xs-6" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+        <img class="col-xs-6" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+    </div>
+    <br>
+    <div class="row">
+        <img class="col-xs-6" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+        <img class="col-xs-6" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
     </div>
 </div>
 
