Update header with logo styling.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata">
+    <link rel="stylesheet" type="text/css" href="./css/custom.css"
 </head>
 <body>
 
 <div class="container">
-    <header>
+    <header class="logo">
         <div class="row">
-            <div class="col-xs-12"><h1>csgray.io</h1></div>
+            <div class="col-xs-12"><h1>csgray.io<span class="cursor">_</span></h1></div>
         </div>
         <div class="row">
             <div class="col-sm-4"><strong>Current Employment</strong>:</div>
