--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" type="text/css" href="./bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata">
     <link rel="stylesheet" type="text/css" href="./css/custom.css">
+    <title>csgray.io: Corey Gray's Portfolio</title>
 </head>
 <body>
 
 <div class="container">
     <header class="logo">
         <div class="row">
-            <div class="col-xs-12"><h1>csgray.io<span class="cursor">_</span></h1></div>
+            <h1 class="col-xs-12">csgray.io<cursor>_</cursor></h1>
         </div>
         <div class="row">
             <div class="col-sm-4"><strong>Current Employment</strong>:</div>
@@ -37,6 +38,9 @@
         <p class="col-xs-12">This is only a test. If this was a real webpage, it'd say something else.</p>
     </div>
     <br>
+    <div class="row">
+        <h2 class="col-xs-12">Featured Work</h2>
+    </div>
     <div class="row">
         <picture class="col-xs-6">
             <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
