--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <source srcset="http://placekitten.com/400/100" media="(max-width: 400px)">
             <source srcset="http://placekitten.com/800/200" media="(max-width: 800px)">
             <source srcset="http://placekitten.com/1600/400">
-            <img src="http://placekitten.com/800/200" alt="PLACE KITTEN!">
+            <img class="img-responsive" sizes="100vw" src="http://placekitten.com/800/200" alt="PLACE KITTEN!">
         </picture>
     </div>
     <br> 
@@ -42,17 +42,17 @@
         <h2 class="col-xs-12">Featured Work</h2>
     </div>
     <div class="row">
-        <picture class="col-xs-6">
+        <picture class="col-xs-6 img-responsive">
             <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
             <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
             <source srcset="http://placekitten.com/800/800">
-            <img src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+            <img class="img-responsive" sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
         </picture>
         <picture class="col-xs-6">
             <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
             <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
             <source srcset="http://placekitten.com/800/800">
-            <img src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+            <img class="img-responsive" sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
         </picture>
     </div>
     <br>
@@ -61,13 +61,13 @@
             <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
             <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
             <source srcset="http://placekitten.com/800/800">
-            <img src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+            <img class="img-responsive" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
         </picture>
         <picture class="col-xs-6">
             <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
             <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
             <source srcset="http://placekitten.com/800/800">
-            <img src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+            <img class="img-responsive" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
         </picture>
     </div>
 </div>
