--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 class="col-xs-12">csgray.io<cursor>_</cursor></h1>
         </div>
         <div class="row">
-            <div class="col-sm-4"><strong>Current Employment</strong>:</div>
+            <div class="col-sm-4"><strong>Current Employment:</strong></div>
             <div class="col-sm-8">SysAdmin at University of Alaska Fairbanks</div>
         </div>
         <div class="row">
@@ -39,36 +39,48 @@
     </div>
     <br>
     <div class="row">
-        <h2 class="col-xs-12">Featured Work</h2>
+        <h2 class="col-xs-12 logo">def featured_work():</h2>
     </div>
     <div class="row">
-        <picture class="col-xs-6 img-responsive">
-            <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
-            <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
-            <source srcset="http://placekitten.com/800/800">
-            <img class="img-responsive" sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
-        </picture>
-        <picture class="col-xs-6">
-            <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
-            <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
-            <source srcset="http://placekitten.com/800/800">
-            <img class="img-responsive" sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
-        </picture>
-    </div>
+        <div class="col-xs-6 project">
+            <picture>
+                <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
+                <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
+                <source srcset="http://placekitten.com/800/800">
+                <img class="img-responsive" sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+            </picture>
+            <h3>Project 1</h3>
+        </div>
+        <div class="col-xs-6 project">
+            <picture>
+                <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
+                <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
+                <source srcset="http://placekitten.com/800/800">
+                <img class="img-responsive" sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+            </picture>
+            <h3>Project 2</h3>
+        </div>
+    </div>    
     <br>
     <div class="row">
-        <picture class="col-xs-6">
-            <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
-            <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
-            <source srcset="http://placekitten.com/800/800">
-            <img class="img-responsive" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
-        </picture>
-        <picture class="col-xs-6">
-            <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
-            <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
-            <source srcset="http://placekitten.com/800/800">
-            <img class="img-responsive" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
-        </picture>
+        <div class="col-xs-6 project">
+            <picture>
+                <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
+                <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
+                <source srcset="http://placekitten.com/800/800">
+                <img class="img-responsive" sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+            </picture>
+            <h3>Project 3</h3>
+        </div>
+        <div class="col-xs-6 project">
+            <picture>
+                <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
+                <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
+                <source srcset="http://placekitten.com/800/800">
+                <img class="img-responsive" sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+            </picture>
+            <h3>Project 4</h3>
+        </div>
     </div>
 </div>
 
