--- a/index.html
+++ b/index.html
@@ -3,86 +3,85 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata">
     <link rel="stylesheet" type="text/css" href="./css/custom.css">
     <title>csgray.io: Corey Gray's Portfolio</title>
 </head>
 <body>
 
-<div class="container">
+<container>
     <header class="logo">
-        <div class="row">
-            <h1 class="col-xs-12">csgray.io<cursor>_</cursor></h1>
-        </div>
-        <div class="row">
-            <div class="col-sm-4"><strong>Current Employment:</strong></div>
-            <div class="col-sm-8">SysAdmin at University of Alaska Fairbanks</div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4"><strong>Current Project:</strong></div>
-            <div class="col-sm-8">Full Stack Nanodegree from Udacity</div>
-        </div>
+        <row>
+            <h1 class="col-12">csgray.io<cursor>_</cursor></h1>
+        </row>
+        <row>
+            <div class="col-4"><strong>Current Employment:</strong></div>
+            <div class="col-8">SysAdmin at University of Alaska Fairbanks</div>
+        </row>
+        <row>
+            <div class="col-4"><strong>Current Project:</strong></div>
+            <div class="col-8">Full Stack Nanodegree from Udacity</div>
+        </row>
     </header>
     <br>
-    <div class="row">
-        <picture class="col-xs-12">
+    <row>
+        <picture class="col-12">
             <source srcset="http://placekitten.com/400/100" media="(max-width: 400px)">
             <source srcset="http://placekitten.com/800/200" media="(max-width: 800px)">
             <source srcset="http://placekitten.com/1600/400">
-            <img class="img-responsive" sizes="100vw" src="http://placekitten.com/800/200" alt="PLACE KITTEN!">
+            <img sizes="100vw" src="http://placekitten.com/800/200" alt="PLACE KITTEN!">
         </picture>
-    </div>
+    </row>
     <br> 
-    <div class="row">
-        <p class="col-xs-12">This is only a test. If this was a real webpage, it'd say something else.</p>
-    </div>
+    <row>
+        <p class="col-12">This is only a test. If this was a real webpage, it'd say something else.</p>
+    </row>
     <br>
-    <div class="row">
-        <h2 class="col-xs-12 logo">def featured_work():</h2>
-    </div>
-    <div class="row">
-        <div class="col-xs-6 project">
+    <row>
+        <h2 class="col-12 logo">def featured_work():</h2>
+    </row>
+    <row>
+        <div class="col-6 project">
             <picture>
                 <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
                 <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
                 <source srcset="http://placekitten.com/800/800">
-                <img class="img-responsive" sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+                <img sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
             </picture>
             <h3>Project 1</h3>
         </div>
-        <div class="col-xs-6 project">
+        <div class="col-6 project">
             <picture>
                 <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
                 <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
                 <source srcset="http://placekitten.com/800/800">
-                <img class="img-responsive" sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+                <img sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
             </picture>
             <h3>Project 2</h3>
         </div>
-    </div>    
+    </row>    
     <br>
-    <div class="row">
-        <div class="col-xs-6 project">
+    <row>
+        <div class="col-6 project">
             <picture>
                 <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
                 <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
                 <source srcset="http://placekitten.com/800/800">
-                <img class="img-responsive" sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+                <img sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
             </picture>
             <h3>Project 3</h3>
         </div>
-        <div class="col-xs-6 project">
+        <div class="col-6 project">
             <picture>
                 <source srcset="http://placekitten.com/200/200" media="(max-width: 400px)">
                 <source srcset="http://placekitten.com/400/400" media="(max-width: 800px)">
                 <source srcset="http://placekitten.com/800/800">
-                <img class="img-responsive" sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
+                <img sizes="50vw" src="http://placekitten.com/200/200" alt="PLACE KITTEN!">
             </picture>
             <h3>Project 4</h3>
         </div>
-    </div>
-</div>
+    </row>
+</container>
 
 </body>
 </html>
